Bug 134121 - EDITING Pie chart leader lines attached to pie slice center instead of edge
Summary: EDITING Pie chart leader lines attached to pie slice center instead of edge
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.1.0 target:24.8.0
Keywords:
Depends on:
Blocks: Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-06-18 16:26 UTC by NISZ LibreOffice Team
Modified: 2024-10-15 21:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PowerPoint with leader lines (29.30 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-06-18 16:26 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in PowerPoint and Impress (167.56 KB, image/png)
2020-06-18 16:27 UTC, NISZ LibreOffice Team
Details
3D piechart-leaderLines.xlsx: leaderLines missing on 3d oval pie charts (11.10 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-01-26 16:32 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-06-18 16:26:49 UTC
Created attachment 162181 [details]
Example file from PowerPoint with leader lines

Attached PPTX file contains a 3D pie chart with many slices and data labels connected with leader lines.
In PowerPoint the leader lines connect the data label to the edge of the pie slices, but in Impress the lines lead to the center of the pie slices.
This makes it harder to read the labels and the chart.

Steps to reproduce:
    1. Open attached document

Actual results:
Leader lines connect the data labels with the center of the pie slices.

Expected results:
Leader lines connect to the edge of the pie slices.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x86)
Build ID: a3c8ea5e644ca2fc04de9f01ba9f8ace47f520f0
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-06-18 16:27:08 UTC
Created attachment 162182 [details]
Screenshot of the original document side by side in PowerPoint and Impress
Comment 2 Commit Notification 2020-10-19 11:01:36 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/657ea0d1250624312e104f9acfb6a04a3ba4cce3

tdf#134121 pie chart: add leader lines

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-11-11 14:34:46 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: a689cf1672e89cb78fbcfa14c505850927e71f58
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!
Comment 4 Justin L 2024-01-26 16:32:52 UTC
Created attachment 192184 [details]
3D piechart-leaderLines.xlsx: leaderLines missing on 3d oval pie charts

patch for this at https://gerrit.libreoffice.org/c/core/+/162630
Comment 5 Commit Notification 2024-01-26 18:58:57 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87facad88d565e8e9fe21d04897058cca0ea55cd

tdf#134121 pie chart2: fix missing leaderLines at top/bottom of 3D ovals

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.