tdf#134121 pie chart: add leader lines

to data labels with custom position.

See commit 769433ad93040bc81f06672c8a2c01e2b76fece3
(tdf#90749 chart: add leader lines to custom data label positions)

Change-Id: If5d912cc04993e59bd5ab93b644ea49ba8642b49
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104410
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>